# image-forge

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
docs/: skill-process.md  technical-design.md
scripts/: migrate-data-root.mjs  patch-version.mjs  prerelease.mjs  release.mjs
src/: App.vue  styles.css  tauri.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  defaults.rs  integration_checks.rs  lib.rs  main.rs  models.rs  state.rs  store.rs  utils.rs
src-tauri/src/services/: agent.rs  agent_store.rs  agent_tools.rs  chat.rs  clipboard.rs  images.rs  mod.rs  models.rs  provider_bundle.rs  queue.rs  references.rs  skill.rs  skill_installer.rs  template_bundle.rs  template_export.rs
src-tauri/tests/: agent_integration.rs
src/components/: AgentComposer.vue  AgentMessageList.vue  AgentWorkspace.vue  AppShell.vue  AppTopbar.vue  ClipboardImageMenu.vue  ComposerPanel.vue  DrawingWorkspace.vue  QueuePanel.vue  ResultPanel.vue  TaskCard.vue
src/components/dialogs/: AboutDialog.vue  ApiSourceDialog.vue  CleanupDialog.vue  ConfirmDialog.vue  EffectImageViewer.vue  GalleryEditorDialog.vue  NoticeDialog.vue  RuntimeLogDialog.vue  SettingsDialog.vue  SkillEditorDialog.vue  SkillManagerDialog.vue  SkillReferenceDialog.vue  SkillRunDialog.vue  SnippetDialog.vue  SnippetEditorDialog.vue  TaskDetailDialog.vue  TemplateEditorDialog.vue  TemplateManagerDialog.vue  TemplateReferenceDialog.vue
src/components/drawers/: GalleryDrawer.vue  TemplateDrawer.vue
src/lib/: formatters.js  generationTimer.js  models.js  options.js  referenceFiles.js  scrollbarVisibility.js  theme.js
tests/: setup.js
tests/components/: AgentComposer.spec.js  AgentMessageList.spec.js  AgentWorkspace.spec.js  AppTopbar.spec.js
tests/lib/: tauri.spec.js  tauriConfig.spec.js
