[package]
name = "image-forge"
version = "0.2.5"
description = "Native image generation workbench"
authors = ["xiaole"]
edition = "2021"

[lib]
name = "image_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
